--- a/css/utils/_couleur.css
+++ b/css/utils/_couleur.css
@@ -56,4 +56,15 @@ p, span {
         border-radius: 10px 0 0 10px;
     }
 
+    /* accueil.css */
+    #doubleCarres:first-child .carre:not(#red){
+        box-shadow: none;
+        border-radius: 0 10px 10px 0;
+    }
+
+    #doubleCarres:last-child .carre:not(#green){
+        box-shadow: none;
+        border-radius: 10px 0 0 10px;
+    }
+
 }
