--- a/css/pages/_sondage.css
+++ b/css/pages/_sondage.css
@@ -18,13 +18,27 @@
 #container article{
     width: 65vw;
     display: flex;
+    justify-content: space-between;
 }
 
 #container article p {
-    margin: 2.5% 5%;
+    margin: 2.5% 0;
     font-family: 'Roboto', sans-serif;
     font-size: 1.4em;
     font-weight: 600;
+}
+
+#container article div {
+    margin: 2.5% 0;
+    width: 10vw;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    font-family: 'Caveat', cursive;
+    font-size: 3em;
+    font-weight: 600;
+    color: white;
 }
 
 .poll_main img {
