--- a/css/pages/_sondage.css
+++ b/css/pages/_sondage.css
@@ -73,3 +73,62 @@
     color: white;
     background-color: grey;
 }
+
+/* POP UP */
+.popup {
+    display: none;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0%;
+    left: 0%;
+    background-color: rgb(0, 0, 0, 0.6);
+}
+
+.popupContent {
+    position: absolute;
+    top: 18em;
+    left: 20%;
+    width: 60vw;
+    height: 35vh;
+    background-color: white;
+    border-radius: 30px;
+}
+
+.popupInput {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+}
+
+h4 {
+    margin: 0 0;
+    font-family: 'Caveat', cursive;
+    font-size: 3em;
+    color: black;
+}
+
+.popupInput input {
+    width: 20em;
+    padding: 8px;
+    margin-top: 1.8em;
+    text-align: center;
+    border: none;
+    border-bottom: 2px solid black;
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.4em;
+}
+
+.check {
+    margin-top: 1.8em;
+    border: 3px solid black;
+    border-radius: 20px;
+    background-color: white;
+    padding: 0.5em 1em;
+    font-family: 'Roboto', sans-serif;
+    font-size: 1em;
+    font-weight: bold;
+}
