--- a/css/pages/_sondage.css
+++ b/css/pages/_sondage.css
@@ -114,7 +114,7 @@ h4 {
 .popupInput input {
     width: 20em;
     padding: 8px;
-    margin-top: 1.8em;
+    margin-top: 1em;
     text-align: center;
     border: none;
     border-bottom: 2px solid black;
@@ -122,7 +122,7 @@ h4 {
     font-size: 1.4em;
 }
 
-.check {
+#check {
     margin-top: 1.8em;
     border: 3px solid black;
     border-radius: 20px;
